--- a/css/common.css
+++ b/css/common.css
@@ -1,18 +1,36 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
 }
 
-img {
-  display: block;
-  max-width: 100%;
+.container {
+  max-width: 600px;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.search-form {
+  margin-bottom: 20px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.photo-card {
+  width: 250px;
+}
+
+.notification {
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: #ff0000;
+  display: none;
 }
